--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <noscript>
+      <!-- this message will show if javascript is disabled in the browser -->
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
